crates/mycelium-hyphae/src/snapshots/mycelium_hyphae__parser__snapshot_tests__snap_child.snap
---
source: crates/mycelium-hyphae/src/parser.rs
assertion_line: 556
expression: result
---
Ok(
    SelectorList(
        [
            Combined {
                left: Simple(
                    SimpleSelector {
                        base: Name(
                            "Foo",
                        ),
                        pseudo_classes: [],
                    },
                ),
                combinator: Child,
                right: Simple(
                    SimpleSelector {
                        base: Kind(
                            "bar",
                        ),
                        pseudo_classes: [],
                    },
                ),
            },
        ],
    ),
)
