crates/mycelium-hyphae/src/snapshots/mycelium_hyphae__parser__snapshot_tests__snap_comma_list.snap
---
source: crates/mycelium-hyphae/src/parser.rs
assertion_line: 560
expression: result
---
Ok(
    SelectorList(
        [
            Simple(
                SimpleSelector {
                    base: Name(
                        "foo",
                    ),
                    pseudo_classes: [],
                },
            ),
            Simple(
                SimpleSelector {
                    base: Kind(
                        "bar",
                    ),
                    pseudo_classes: [],
                },
            ),
        ],
    ),
)
