crates/mycelium-hyphae/src/snapshots/mycelium_hyphae__parser__snapshot_tests__snap_complex_chain.snap
---
source: crates/mycelium-hyphae/src/parser.rs
assertion_line: 566
expression: result
---
Ok(
    SelectorList(
        [
            Combined {
                left: Combined {
                    left: Simple(
                        SimpleSelector {
                            base: Name(
                                "Foo",
                            ),
                            pseudo_classes: [],
                        },
                    ),
                    combinator: Child,
                    right: Simple(
                        SimpleSelector {
                            base: Kind(
                                "bar",
                            ),
                            pseudo_classes: [],
                        },
                    ),
                },
                combinator: Sibling,
                right: Simple(
                    SimpleSelector {
                        base: Name(
                            "baz",
                        ),
                        pseudo_classes: [],
                    },
                ),
            },
        ],
    ),
)
