crates/mycelium-hyphae/src/snapshots/mycelium_hyphae__parser__snapshot_tests__snap_descendant.snap
---
source: crates/mycelium-hyphae/src/parser.rs
assertion_line: 559
expression: result
---
Ok(
    SelectorList(
        [
            Combined {
                left: Simple(
                    SimpleSelector {
                        base: Name(
                            "parent",
                        ),
                        pseudo_classes: [],
                    },
                ),
                combinator: Descendant,
                right: Simple(
                    SimpleSelector {
                        base: Kind(
                            "child",
                        ),
                        pseudo_classes: [],
                    },
                ),
            },
        ],
    ),
)
