crates/mycelium-hyphae/src/snapshots/mycelium_hyphae__parser__snapshot_tests__snap_empty_err.snap
---
source: crates/mycelium-hyphae/src/parser.rs
assertion_line: 573
expression: result
---
Err(
    UnexpectedEof,
)
