crates/mycelium-hyphae/src/snapshots/mycelium_hyphae__parser__snapshot_tests__snap_hyphenated_kind.snap
---
source: crates/mycelium-hyphae/src/parser.rs
assertion_line: 569
expression: result
---
Ok(
    SelectorList(
        [
            Simple(
                SimpleSelector {
                    base: Kind(
                        "arrow-function",
                    ),
                    pseudo_classes: [],
                },
            ),
        ],
    ),
)
