crates/mycelium-hyphae/src/snapshots/mycelium_hyphae__parser__snapshot_tests__snap_hyphenated_name.snap
---
source: crates/mycelium-hyphae/src/parser.rs
assertion_line: 568
expression: result
---
Ok(
    SelectorList(
        [
            Simple(
                SimpleSelector {
                    base: Name(
                        "my-symbol",
                    ),
                    pseudo_classes: [],
                },
            ),
        ],
    ),
)
