crates/mycelium-hyphae/src/snapshots/mycelium_hyphae__parser__snapshot_tests__snap_imports.snap
---
source: crates/mycelium-hyphae/src/parser.rs
assertion_line: 564
expression: result
---
Ok(
    SelectorList(
        [
            Simple(
                SimpleSelector {
                    base: Kind(
                        "function",
                    ),
                    pseudo_classes: [
                        PseudoClass {
                            name: "imports",
                            argument: None,
                        },
                    ],
                },
            ),
        ],
    ),
)
