crates/mycelium-hyphae/src/snapshots/mycelium_hyphae__parser__snapshot_tests__snap_invalid_char_err.snap
---
source: crates/mycelium-hyphae/src/parser.rs
assertion_line: 574
expression: result
---
Err(
    LexError(
        0,
    ),
)
