crates/mycelium-hyphae/src/snapshots/mycelium_hyphae__parser__snapshot_tests__snap_kind_descendant_name.snap
---
source: crates/mycelium-hyphae/src/parser.rs
assertion_line: 571
expression: result
---
Ok(
    SelectorList(
        [
            Combined {
                left: Simple(
                    SimpleSelector {
                        base: Kind(
                            "class",
                        ),
                        pseudo_classes: [],
                    },
                ),
                combinator: Descendant,
                right: Simple(
                    SimpleSelector {
                        base: Name(
                            "method",
                        ),
                        pseudo_classes: [],
                    },
                ),
            },
        ],
    ),
)
