crates/mycelium-hyphae/src/snapshots/mycelium_hyphae__parser__snapshot_tests__snap_kind_selector.snap
---
source: crates/mycelium-hyphae/src/parser.rs
assertion_line: 554
expression: result
---
Ok(
    SelectorList(
        [
            Simple(
                SimpleSelector {
                    base: Kind(
                        "function",
                    ),
                    pseudo_classes: [],
                },
            ),
        ],
    ),
)
